<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MWCalc</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="decimal">.</string>
    <string name="equals">=</string>
    <string name="addition">+</string>
    <string name="subtraction">-</string>
    <string name="multiplication">*</string>
    <string name="division">/</string>
    <string name="clear">Clear</string>
    <string name="wall_change">Change Wallpaper</string>
    <string name="pref_wall_change">Let\'s change this background!</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="unitconverter">Unit Converter</string>

    <!--Conversions******************************************-->
    <string name="startingvalue">Starting Value</string>
    <string name="hello_world">Hello World</string>
    <string name="calculator_text_view">Number Goes Here</string>

    <string name="length">Length</string>
    <string name="mitokm">mi to km</string>
    <string name="kmtomi">km to mi</string>
    <string name="fttom">ft to m</string>
    <string name="mtoft">m to ft</string>
    <string name="intoft">in to ft</string>
    <string name="fttoin">ft to in</string>



    <string name="weight">Weight</string>
    <string name="lbtokg">lb to kg</string>
    <string name="kgtolb">kg to lb</string>


    <string name="speed">Speed</string>
    <string name="mphtokph">mph to kph</string>
    <string name="kphtomph">kph to mph</string>




    <string name="cooking">Cooking</string>
    <string name="tsptotbsp">tsp to Tbsp</string>
    <string name="tbsptotsp">Tbsp to tsp</string>
    <string name="cupstotbsp">Cups to Tbsp</string>
    <string name="tbsptocups">Tbsp to Cups</string>



    <string name="volume">Volume</string>
    <string name="galtol">gal to L</string>
    <string name="ltogal">L to gal</string>








    <string name="website_hint">Click to open the developer\'s website</string>

    <!-- numbers ***********************************-->
    <string name="clear_text">C</string>
    <string name="delete_text">del</string>
    <string name="squared_text">x<sup>2</sup></string>
    <string name="zero_text">0</string>
    <string name="one_text">1</string>
    <string name="two_text">2</string>
    <string name="three_text">3</string>
    <string name="four_text">4</string>
    <string name="five_text">5</string>
    <string name="six_text">6</string>
    <string name="seven_text">7</string>
    <string name="eight_text">8</string>
    <string name="nine_text">9</string>
    <string name="equals_text">=</string>
    <string name="multiplication_text">*</string>
    <string name="division_text">/</string>
    <string name="subtraction_text">-</string>
    <string name="square_root_text">√</string>
    <string name="decimal_text">.</string>
    <string name="left_right_hand">Left Handed / Right Handed</string>
    <string name="right_ui_selector">&gt;</string>
    <string name="left_ui_selector">&lt;</string>


    <!-- nav menu Strings-->.

    <string-array name="planets_array">
        <item>Unit Converter</item>
        <item>Settings</item>
        <item>Help</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>


    <!-- Color Picker -->
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on color below to apply</string>
    <string name="arrow_right">→</string>
    <string name="arrow_down">↓</string>
    <string name="hex">Hex:</string>
    <string name="hex_hint">#ff000000</string>
    <string name="set">Set</string>
    <string name="color_default">Default</string>

    <string name="settings_bg_color_dialog">Color Picker</string>
    <string name="settings_default_color_confirm">Default color confirm</string>
    <string name="settings_bg_color_confirm">Color Confirm</string>


</resources>
