<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout_ui_switch"
            android:layout_gravity="center|left">

            <Button
                android:id="@+id/ui_switch"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:scaleType="centerInside"
                android:background="@drawable/left_ui_selector"
                android:clickable="true"
                android:gravity="center|left"/>

        </LinearLayout>
        </LinearLayout>

    <LinearLayout
        android:id="@+id/keypad_layout_right"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:clickable="false"
        android:orientation="vertical"
        android:gravity="bottom"
        android:layout_gravity="bottom|right"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/linearLayout_delete"
            android:gravity="bottom|right">

            <Button
                style="@style/CalcButtonStyle"
                android:id="@+id/delete"
                android:text="@string/delete_text"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/linearLayout_clear"
            android:gravity="bottom|right">

            <Button
                style="@style/CalcButtonStyle"
                android:id="@+id/clear"
                android:text="@string/clear_text"/>

            <Button
                style="@style/CalcButtonStyle"
                android:id="@+id/sqrt"
                android:text="@string/square_root_text"/>

            <Button
                style="@style/CalcButtonStyle"
                android:id="@+id/squared"
                android:text="@string/squared_text"/>

            <Button
                style="@style/CalcButtonStyle"
                android:id="@+id/division"
                android:text="@string/division_text"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/linearLayout_7"
            android:gravity="bottom|right">

            <Button
                style="@style/CalcButtonStyle"
                android:id="@+id/seven"
                android:text="@string/seven_text"/>

            <Button
                style="@style/CalcButtonStyle"
                android:id="@+id/eight"
                android:text="@string/eight_text"/>

            <Button
                style="@style/CalcButtonStyle"
                android:id="@+id/nine"
                android:text="@string/nine_text"/>

            <Button
                style="@style/CalcButtonStyle"
                android:id="@+id/multiplication"
                android:text="@string/multiplication_text"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout_4"
            android:gravity="bottom|right">

            <Button
                style="@style/CalcButtonStyle"
                android:id="@+id/four"
                android:text="@string/four_text"/>

            <Button
                style="@style/CalcButtonStyle"
                android:id="@+id/five"
                android:text="@string/five_text"/>

            <Button
                style="@style/CalcButtonStyle"
                android:id="@+id/six"
                android:text="@string/six_text"/>

            <Button
                style="@style/CalcButtonStyle"
                android:id="@+id/subtraction"
                android:text="@string/subtraction_text"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout_1"
            android:gravity="bottom|right">

            <Button
                style="@style/CalcButtonStyle"
                android:id="@+id/one"
                android:text="@string/one_text"/>

            <Button
                style="@style/CalcButtonStyle"
                android:id="@+id/two"
                android:text="@string/two_text"/>

            <Button
                style="@style/CalcButtonStyle"
                android:id="@+id/three"
                android:text="@string/three_text"/>

            <Button
                style="@style/CalcButtonStyle"
                android:id="@+id/addition"
                android:text="@string/addition"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout_0"
            android:gravity="bottom|right">

            <Button
                style="@style/CalcButtonStyle"
                android:id="@+id/zero"
                android:text="@string/zero_text"/>

            <Button
                style="@style/CalcButtonStyle"
                android:id="@+id/decimal"
                android:text="@string/decimal_text"/>

            <Button
                style="@style/CalcButtonStyle"
                android:id="@+id/equals"
                android:text="@string/equals_text"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>